--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Database
 spring.jpa.show-sql=true
 
+#Cache
+spring.resources.chain.strategy.fixed.enabled=true
+spring.resources.chain.strategy.fixed.paths=/**
+spring.resources.chain.strategy.fixed.version=v12
