--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Database
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 #Cache
 spring.resources.chain.strategy.fixed.enabled=true
